Moved jetty-ee9/test-ee9-sessions to jetty-ee9-tests/jetty-ee9-test-sessions. Renamed all child modules to comply with the convention.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>